fix(password-input): icon gap

--- a/packages/password-input/src/index.module.css
+++ b/packages/password-input/src/index.module.css
@@ -1,5 +1,15 @@
-.addons:last-child {
-    padding: 0;
+.eye:last-child {
+    margin-right: var(--gap-s-neg);
+}
+
+.xl {
+    & .eye:last-child {
+        margin-right: var(--gap-m-neg);
+    }
+
+    & .eye {
+        margin-left: var(--gap-2xs);
+    }
 }
 
 .input::-ms-reveal {
